--- a/app-tier/src/main/resources/templates/index.html
+++ b/app-tier/src/main/resources/templates/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>Task List</title>
+    <title>Task Tracker List</title>
     <style>
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
