--- a/app-tier/src/main/resources/templates/index.html
+++ b/app-tier/src/main/resources/templates/index.html
@@ -86,7 +86,7 @@
 </head>
 <body>
 <div class="container">
-    <h2>All Tasks</h2>
+    <h2>All Tasks Dashboard</h2>
     <a class="btn" href="/add">Add New Task</a>
     <table>
         <thead>
